[project]
name = "agent-handler"
version = "0.1.0"
description = "Scheduled execution of AI coding agent CLIs"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2",
    "platformdirs>=4",
    "python-crontab>=3",
]

[project.scripts]
agent-handler = "agent_handler.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_handler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
