[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "agent-handler"
version = "0.1.0"
description = "Scheduled execution of AI coding agent CLIs"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2",
    "platformdirs>=4",
    "python-crontab>=3",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
agent-handler = "agent_handler.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_handler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
